--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Getting a class from request",
     "type": "llibrary",
     "license": "MIT",
+    "version": "1.0.0",
     "autoload": {
         "psr-4": {
             "Vvvdev\\ClassFromRequest\\": "src/"
