--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,11 @@
         }
     },
     "minimum-stability": "stable",
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^10.4",
+        "ext-json": "*",
+        "php-mock/php-mock": "^2.4",
+        "php-mock/php-mock-phpunit": "^2.7",
+        "phpstan/phpstan": "^1.10"
+    }
 }
